Fix height with smaller logo on mobile

--- a/src/sass/layouts/_framework.scss
+++ b/src/sass/layouts/_framework.scss
@@ -8,7 +8,7 @@
 }
 
 #content-wrapper {
-  margin-top: 90px;
+  margin-top: 65px;
 }
 
 .header-title {
